[package]
name = "geofancy-rust"
version = "0.1.0"
authors = ["Neville Dipale <nevilledips@gmail.com>"]
build = "build.rs"

[dependencies]
log                 = "0.4.3"
redis               = "0.9"
tower-h2            = { git = "https://github.com/tower-rs/tower-h2" }
tower-grpc          = { git = "https://github.com/tower-rs/tower-grpc" }
prost               = "0.4.0"
prost-types         = "0.4.0"
prost-derive        = "0.4.0"
futures             = "~0.1"
futures-cpupool     = "~0.1"
tls-api             = "0.1"
bytes               = "~0.4"
dotenv              = "~0.12"
rustracing          = "~0.1"
rustracing_jaeger   = "~0.1"
tokio               = "0.1"
tokio-core          = "0.1"

[build-dependencies]
tower-grpc-build    = { git = "https://github.com/tower-rs/tower-grpc" }