[package]
name = "geofancy-rust"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
log                 = "0.4.3"
redis               = { version = "0.25", features = ["tokio-comp"] }
prost               = "0.12"
tonic               = "0.11"
futures             = "0.3"
bytes               = "1"
dotenv              = "0.15"
tokio               = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"
